@@ -1,3 +1,7 @@
+2003-04-17  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* site/download/debian.html: Add link to Laura's package.
+
 2003-04-08  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* GNUmakefile (site): Don't generate buttons.
